New colors, logo, and chrome app release

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 	<div id="container">
+		<div id="left-side">
+			<div id="flow-logo">
+				<img src="/img/flow-logo.png">
+			</div>
+		</div>
 		<div id="content">
 			<div id="projects">
 				<ul>
