Lots of updates

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,10 @@
 <script src="js/vendor/backbone.wreqr/lib/backbone.wreqr.js"></script>
 <script src="js/vendor/marionette/lib/core/backbone.marionette.js"></script>
 <script src="js/vendor/autosize/dist/autosize.js"></script>
+<script src="js/vendor/jquery-ui/jquery-ui.js"></script>
 <!-- endbower -->
+<script src="js/vendor/jquery-ui/ui/draggable.js"></script>
+<script src="js/vendor/jquery-ui/ui/droppable.js"></script>
 
 <!-- inject:js -->
 <script src="js/App.js"></script>
